# farm-software

./: .env.example  docker-compose.yml  pyproject.toml
GUI/: helpers.py  run_gui.py
GUI/api/: business_api.py
GUI/views/: business_add_view.py
app/: base.py  db.py  main.py
app/api/: business_routes.py  helpers.py  site_routes.py
app/repositories/: business_repository.py  site_repository.py
migrations/: env.py
migrations/versions/: 3cc8da8bf82e_create_sites_table.py  6c5072975a13_create_businesses_table.py  f5b3363fba33_add_abn_ph_em_to_business_table.py
models/: __init__.py  business.py  site.py
schema/: business.py  site.py  validators.py
tests/: conftest.py  test_business.py  test_gui_helpers.py  test_site.py
