[project]
name = "farm-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.3",
    "pyside6>=6.11.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
